fix(sonar): resolve miot-integrations GPS webhook findings
Group create/update repository args into parameter records, clamp delivery
limit with Math.clamp, use UTC OffsetDateTime, re-interrupt on test HTTP
InterruptedException, return Optional for missing deliveries, lower update()
complexity, and fix assertThrows lambdas to a single throwing call.